--- a/package.json
+++ b/package.json
@@ -7,17 +7,12 @@
     "type": "git",
     "url": "https://github.com/rstacruz/nprogress.git"
   },
-  "scripts": {
-    "test": "mocha"
-  },
   "main": "nprogress.js",
   "license": "MIT",
   "devDependencies": {
     "chai": "~1.6.1",
     "jquery": "^2.1.1",
-    "jsdom": "^5.4.3",
-    "mocha": "^2.2.4",
-    "mocha-jsdom": "^0.3.0"
+    "mocha": "^2.2.4"
   },
   "dependencies": {},
   "jspm": {
