--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "type": "git",
     "url": "https://github.com/rstacruz/nprogress.git"
   },
-  "main": "nprogress.js",
+  "scripts": {
+    "build": "uglifyjs nprogress.js --compress --mangle --output nprogress.min.js"
+  },
+  "main": "nprogress.min.js",
   "license": "MIT",
   "devDependencies": {
     "chai": "~1.6.1",
     "jquery": "^2.1.1",
-    "mocha": "^2.2.4"
+    "mocha": "^2.2.4",
+    "uglify-js": "^3.3.10"
   },
-  "dependencies": {},
   "jspm": {
     "format": "global",
     "shim": {
